# kinova_ws

./: .gitignore  README.md  The Kinova Pick and place.txt  complete_instructions.md  launch  launch.sh
src/kinova_control/: package.xml  setup.cfg  setup.py
src/kinova_control/config/: control_params.yaml  grasp_params.yaml
src/kinova_control/kinova_control/: __init__.py  grasp_verifier.py  gripper_controller.py  ik_solver.py  motion_executor.py  pick_and_place_node.py
src/kinova_control/launch/: control.launch.py
src/kinova_control/resource/: kinova_control
src/kinova_description/: CMakeLists.txt  package.xml
src/kinova_description/config/: controllers.yaml  cube_container_mapping.yaml  waypoints.yaml
src/kinova_description/launch/: bringup.launch.py
src/kinova_description/urdf/: gen3_lite_environment.urdf.xacro
src/kinova_description/worlds/: pick_and_place.sdf
src/kinova_perception/: package.xml  setup.cfg  setup.py
src/kinova_perception/config/: perception_params.yaml
src/kinova_perception/kinova_perception/: __init__.py  color_detector_node.py
src/kinova_perception/launch/: perception.launch.py
src/kinova_perception/resource/: kinova_perception
src/kortex_description/arms/gen3_lite/6dof/urdf/: gen3_lite_macro.xacro  kortex.ros2_control.xacro
src/kortex_description/grippers/gen3_lite_2f/urdf/: gen3_lite_2f.ros2_control.xacro  gen3_lite_2f_macro.xacro
