<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- ======================================================================
     kinova_control — IK solver, motion executor, gripper controller, grasp
     verifier, and pick-and-place state machine.
     ====================================================================== -->
<package format="3">
  <name>kinova_control</name>
  <version>1.0.0</version>
  <description>IK, motion planning, and state machine for Kinova Gen3 Lite pick-and-place</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>trajectory_msgs</depend>
  <depend>control_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
