<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<!-- ======================================================================
     kinova_perception — Color-based cube detection and 3D pose estimation.
     ====================================================================== -->
<package format="3">
  <name>kinova_perception</name>
  <version>1.0.0</version>
  <description>Color-based cube detection and 3D pose estimation for Kinova pick-and-place</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>tf2_ros</depend>
  <depend>image_transport</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
